реализовал методы согласно примеру